force-app/main/default/objects/GoogleCalendarNotification__e/GoogleCalendarNotification__e.object-meta.xml
<CustomObject>
    <label>Google Calendar Notification</label>
    <pluralLabel>Google Calendar Notifications</pluralLabel>
</CustomObject>