force-app/main/default/objects/GoogleCalendarNotification__e/fields/Goog_Channel_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Goog_Channel_Expiration__c</fullName>
    <label>Goog-Channel-Expiration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>