force-app/main/default/objects/GoogleCalendarNotification__e/fields/Goog_Resource_ID__c.field-meta.xml
<CustomField>
    <fullName>Goog_Resource_ID__c</fullName>
    <label>Goog-Resource-ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>