force-app/main/default/objects/GoogleCalendarNotification__e/fields/Goog_Resource_State__c.field-meta.xml
<CustomField>
    <fullName>Goog_Resource_State__c</fullName>
    <label>Goog-Resource-State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>