force-app/main/default/objects/GoogleCalendarNotification__e/fields/GoogChannelID__c.field-meta.xml
<CustomField>
    <fullName>GoogChannelID__c</fullName>
    <label>Goog-Channel-ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>